--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nanoid": "^3.3.11",
     "nodemon": "^3.1.10",
     "prisma": "^6.7.0",
+    "stripe": "^18.1.1",
     "zod": "^3.24.4"
   }
 }
