fix: correct prisma generate command in package.json; update vercel configuration to use server.js

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
     "build": "tsc",
     "start": "nodemon dist/server.js",
-    "generate": "prisma postinstall --schema=src/prisma/schema.prisma"
+    "postinstall": "prisma generate --schema=src/prisma/schema.prisma"
   },
   "keywords": [],
   "author": "",
